# forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ANVIL_SKILL.md  ARCHITECTURE.md  CONTEXT_GOVERNOR.md  EXTRACTION_LEDGER.md  FORGE_ALPHA_CONTRACT.md  FORGE_CONTRACT.md  Forge Native Operating.md  INSTALL.md  LIFECYCLE.md  MEMORY.md  PRODUCTION_READINESS_REVIEW.md  RECEIPTS.md  SHIP_READINESS_AUDIT.md  TROUBLESHOOTING.md  WALKTHROUGH.md  WHY_FORGE.md
docs/brainstorms/: 2026-06-22-forge-global-opencode-distribution-requirements.md
docs/plans/: 2026-06-22-001-feat-global-opencode-distribution-plan.md  2026-06-23-rename-mcp-prefix.md
forge/: __init__.py  _lock.py  cli.py  config.py  distribution.py  lifecycle.py  mcp_server.py  migrate_tasks.py  persistence.py  service.py  task_state.py
forge/context/: __init__.py  formatter.py  governor.py  (+1 more)
packaging/: forge.spec
scripts/: build_release.py  generate_forge_system.py  install.ps1  install.sh
tests/: conftest.py  test_baseline.py  test_cli.py  test_config.py  test_context_governor.py  test_distribution.py  test_documentation.py  test_evidence.py  test_finish_task_integration.py  test_finish_task_memory_creation.py  test_lifecycle.py  test_lock.py  test_mcp_contract.py  test_memory_cards.py  test_memory_maintenance_gating.py  test_memory_maintenance_validation.py  test_memory_scoring.py  test_memory_store.py  test_memory_validation.py  test_orphaned_batch_recovery.py  test_path_safety_contract.py  test_plugin_adapter.py  test_release_build.py  test_release_workflow.py  test_review_diff.py  test_review_verdict.py  test_service_contract.py  test_session_state_persistence.py  test_submit_outcome_contract.py  test_task_persistence.py  test_telemetry.py  test_tool_result_store.py
(+56 files in other folders)
