[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0-alpha.1"
description = "A narrow runtime control layer for coding agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["mcp>=1.0", "portalocker>=2.10"]

[project.optional-dependencies]
dev = ["pytest>=8", "build>=1"]

[project.scripts]
forge = "forge.cli:main"
forge-alpha = "forge.cli:main"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.setuptools.package-data]
forge = [
    "skills/review-memory/SKILL.md",
    "plugin/opencode/package*.json",
    "plugin/opencode/*.json",
    "plugin/opencode/*.mjs",
    "plugin/opencode/commands/*.md",
    "plugin/opencode/src/*.ts",
    "plugin/opencode/dist/*.js",
    "plugin/opencode/dist/*.js.map",
    "plugin/opencode/loader.js",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
